Changelog
=========

In next release...

* Fixed UI styling on Plone 4.

* Compatibility fix for Chameleon.

1.3.0-b3 (2010-02-04)
---------------------

* Plone 4 compatibility.
  [malthe]

* New icons.
  [malthe]

1.3.0-b2 (2010-01-17)
---------------------

* Added topic view which inherits the view setting from the topic
  content object (using a mapping to collage view names).
  [malthe]

* Added topic views for tabular and summary displays.
  [malthe]

* Fixed issue where you could not choose the standard layout if a
  missing layout was already selected (this might occur if an add-on
  product had been removed).
  [malthe]

* Synched ``i18n/collage-xx.po`` files (10 messages added, 5 removed)
  [glenfant]

* Added a GS upgrade step to 1.3.0
  [glenfant]

1.3.0-b1 (2010-01-09)
---------------------

* Adjusted the row renderer's use of template arguments for compatibility
  with Zope 2.12.
  [davisagli]

* Aliases are now inserted using an ajax-driven reference browser
  (custom implementation) which operates similarly to the standard
  Plone reference browser widget.
  [malthe]

* Fail gracefully (and informatively) when a layout cannot render.
  [malthe]

* Move the "split column" action to the row.
  [malthe]

* Cleaned up layout stylesheet.
  [malthe]

* Fixed issue that prevented inline-editing from working properly.
  [malthe]

* Changes to user interface appearance.
  [malthe]

* Added form protection.
  [malthe]

* Rewired compose view to simplify templates and avoid needless
  indirection.
  [malthe]

* Rename 'Manage page' to 'Compose'.
  [malthe]

* Move settings fields to the settings schemata. Added field descriptions.
  [malthe]

1.2.3 (2009-11-02)
------------------

* Fixed search bug mentioned in #57 when adding alias.
  [glenfant]

* Worked around IE CSS bugs mentioned in issue #60. Thanks to Kevin Deldycke.
  [glenfant]

* Synched all .po with the latest labels and updated the ``*-fr.po``